--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/main/Unity.gitignore
 #
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
+/Shadow blade rpg monde ouvert/[Ll]ibrary/
+/Shadow blade rpg monde ouvert/[Tt]emp/
+/Shadow blade rpg monde ouvert/[Oo]bj/
+/Shadow blade rpg monde ouvert/[Bb]uild/
+/Shadow blade rpg monde ouvert/[Bb]uilds/
+/Shadow blade rpg monde ouvert/[Ll]ogs/
+/Shadow blade rpg monde ouvert/[Uu]ser[Ss]ettings/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
